welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:15: error: not found: value ab
print(ab)
      ^blueTicket:16: error: not found: value a0
print(a0) 
      ^